{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 9,
  "lineage": "9b5d696d-db29-a273-bd6e-1112c5bc7cf4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-20T09:58:27.825-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbide-tenure-428618-v7/global/firewalls/allow-hosscomunicacion-ssh",
            "log_config": [],
            "name": "allow-hosscomunicacion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "carbide-tenure-428618-v7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/global/firewalls/allow-hosscomunicacion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "hosscomunicacion-web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-hosscomunicacion-ssh",
            "project": "carbide-tenure-428618-v7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-20T09:58:27.875-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbide-tenure-428618-v7/global/firewalls/allow-hosscomunicacion-web",
            "log_config": [],
            "name": "allow-hosscomunicacion-web",
            "network": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "carbide-tenure-428618-v7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/global/firewalls/allow-hosscomunicacion-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "hosscomunicacion-web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-hosscomunicacion-web",
            "project": "carbide-tenure-428618-v7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260817",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/zones/us-central1-c/disks/hosscomunicacion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-08-20T09:58:29.204-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/carbide-tenure-428618-v7/zones/us-central1-c/instances/hosscomunicacion",
            "instance_id": "6560671395018869979",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hoss:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGASx1fiay8mBvEUlIDyDOHBF4Ed5ZT9LsXT5EYzxrCP"
            },
            "metadata_fingerprint": "CwW9tnr0iz8=",
            "name": "hosscomunicacion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.65.240.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "carbide-tenure-428618-v7",
                "vlan": 0
              }
            ],
            "project": "carbide-tenure-428618-v7",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "host_error_timeout_seconds": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbide-tenure-428618-v7/zones/us-central1-c/instances/hosscomunicacion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "hosscomunicacion-web"
            ],
            "tags_fingerprint": "sh3ZhyrLg-Q=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 1,
          "identity": {
            "name": "hosscomunicacion",
            "project": "carbide-tenure-428618-v7",
            "zone": "us-central1-c"
          }
        }
      ]
    }
  ]
}